fix(header): fix headers items on mobile

--- a/src/src/styles/main.scss
+++ b/src/src/styles/main.scss
@@ -71,7 +71,6 @@ input {
 }
 
 .container {
-  width: 100%;
   padding-right: 1rem;
   padding-left: 1rem;
   margin-right: auto;
